testes do launchServiceTest finalizados